remove optimizeLegibility to fix chromium linux bug (i hope)

--- a/sass/defaults/_root.sass
+++ b/sass/defaults/_root.sass
@@ -7,7 +7,7 @@
   +establish-baseline
 
 html
-  text-rendering: optimizeLegibility
+  // text-rendering: optimizeLegibility @@@ text flow bug in chromium linux
   -webkit-font-smoothing: antialiased
 
 body
